[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Vadzim Dambrouski <pftbest@gmail.com>",
    "William D. Jones <thor0505@comcast.net>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to MSP430 microcontrollers"
documentation = "https://docs.rs/msp430"
keywords = ["interrupt", "msp430", "peripheral", "register"]
license = "MIT OR Apache-2.0"
name = "msp430"
repository = "https://github.com/rust-embedded/msp430"
version = "0.4.1"
edition = "2021"

[features]
default = ["critical-section-single-core"]
critical-section-single-core = ["critical-section/restore-state-u16"]
outline-cs = ["outline-cs-acq", "outline-cs-rel"]
outline-cs-acq = []
outline-cs-rel = []

[dependencies.critical-section]
version = "1.0.0"
